# FastGram

./: pyproject.toml
app/api/v1/: deps.py  routers.py
app/api/v1/endpoints/: user.py
app/core/: config.py  container.py
app/db/: __init__.py
app/db/models/: user.py
app/repositories/: __init__.py  user.py
app/schemas/: mixins.py  user.py
app/services/: __init__.py  user.py
