[tool.poetry]
name = "FastGram"
version = "0.1.0"
description = ""
authors = ["Kamran <kamrankek48@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.114.1"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.34"}
dependency-injector = "^4.42.0"
uvicorn = "^0.30.6"
alembic = "^1.13.2"
asyncpg = "^0.29.0"
aiosqlite = "^0.20.0"
pyjwt = {extras = ["crypto"], version = "^2.9.0"}
bcrypt = "^4.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
